<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brobofett.hauntedgranburry_2.MainActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="280dp"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context="com.example.brobofett.hauntedgranburry_2.Navigation"
        android:layout_marginTop="-459dp"
        map:layout_constraintHorizontal_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            //SELECTION #1

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img1"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/hoodjail" />

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page1_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>


            //SELECTION #2

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img3"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/courthouse" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page2_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>
            //SELECTION #3

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img4"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/nutthotel" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page3_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>
            //SELECTION #4

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img5"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/langdon" />

                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page4_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>
            //SELECTION #5

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img6"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/opera" />

                <TextView
                    android:id="@+id/txt6"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page5_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>
            //SELECTION #6

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img7"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/bakery" />

                <TextView
                    android:id="@+id/txt7"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="web"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page6_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>
            //SELECTION #7

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img8"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/cementery" />

                <TextView
                    android:id="@+id/txt8"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="all"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page7_text"
                    android:textColor="@color/allTextColor" />


            </TableRow>

            //SELECTION #8

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/img9"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/market" />

                <TextView
                    android:id="@+id/txt9"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:autoLink="all"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_menu_page8_text"
                    android:textColor="@color/allTextColor" />


            </TableRow>

            //SELECTION #Appreciation

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgAp"
                    android:layout_width="105dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/littleghost2" />

                <TextView
                    android:id="@+id/txtAp"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="3dp"
                    android:autoLink="all"
                    android:background="@color/naveMenueSelectorColor"
                    android:linksClickable="true"
                    android:text="@string/nav_appreciation_text"
                    android:textColor="@color/allTextColor" />
            </TableRow>


        </TableLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>



